syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jayden.product";
option java_outer_classname = "ProductProto";

package product;

service ProductService {

  rpc CreateProduct(CreateProductRequest) returns (Product);

  rpc GetProduct(GetProductRequest) returns (Product);
}

message CreateProductRequest {
  Product product = 1;
}

message GetProductRequest {
  // The id of the product to retrieve.
  string product_id = 1;
}

message Product {
  string name = 1;
  string description = 2;
  float price = 3;
}
